--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Prepare ccache timestamp
         id: ccache_timestamp
         run: |
-          echo "::set-output name=FULL_DATE::$(date +'%Y-%m-%d')"
-          echo "::set-output name=MONTH_DATE::$(date +'%Y-%m')"
+          echo "FULL_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          echo "MONTH_DATE=$(date +'%Y-%m')" >> $GITHUB_ENV
 
       - name: Create cache key from ${{ matrix.model }}
         id: ccache_model_key
-        run: echo "::set-output name=KEY::$( echo ${{ matrix.model }} | tr ',' '_' )"
+        run: echo "KEY=$(echo ${{ matrix.model }} | tr ',' '_')" >> $GITHUB_ENV
 
       - name: Cache ccache files
         uses: actions/cache@v3
